--- a/catkin_ws /src/task1/package.xml
+++ b/catkin_ws /src/task1/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>Task1</name>
+  <name>task1</name>
   <version>0.0.0</version>
-  <description>The Task1 package</description>
+  <description>The task1 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/Task1</url> -->
+  <!-- <url type="website">http://wiki.ros.org/task1</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
